회원가입, 로그인 수정 및 비디오 CRUD 구현