@@ -2,7 +2,9 @@ package org.sparta.jenview.service;
 
 import jakarta.transaction.Transactional;
 import org.sparta.jenview.dto.VideoDTO;
+import org.sparta.jenview.entity.UserEntity;
 import org.sparta.jenview.entity.VideoEntity;
+import org.sparta.jenview.repository.UserRepository;
 import org.sparta.jenview.repository.VideoRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -14,10 +16,14 @@ import java.util.stream.Collectors;
 public class VideoService {
 
     @Autowired
-    private final VideoRepository videoRepository;
+    private VideoRepository videoRepository;
 
-    public VideoService(VideoRepository videoRepository) {
+    private UserRepository userRepository;
+
+    @Autowired
+    public VideoService(VideoRepository videoRepository, UserRepository userRepository) {
         this.videoRepository = videoRepository;
+        this.userRepository = userRepository;
     }
 
     // Videos 엔티티를 VideoDTO로 변환하는 메서드
@@ -28,10 +34,11 @@ public class VideoService {
         videoDTO.setDuration(videoEntity.getDuration());
         videoDTO.setViewCount(videoEntity.getViewCount());
         videoDTO.setPlayTime(videoEntity.getPlayTime());
+        videoDTO.setUserId(videoEntity.getUserEntity().getId()); // userId 설정
         return videoDTO;
     }
 
-    // VideoDTO를 Videos 엔티티로 변환하는 메서드
+    // VideoDTO를 VideoEntity로 변환하는 메서드
     private VideoEntity toEntity(VideoDTO videoDTO) {
         VideoEntity videoEntity = new VideoEntity();
         videoEntity.setTitle(videoDTO.getTitle());
@@ -39,13 +46,19 @@ public class VideoService {
         videoEntity.setDuration(videoDTO.getDuration());
         videoEntity.setViewCount(videoDTO.getViewCount());
         videoEntity.setPlayTime(videoDTO.getPlayTime());
+
+        // userEntity 설정
+        UserEntity userEntity = userRepository.findById(videoDTO.getUserId())
+                .orElseThrow(() -> new RuntimeException("User not found with id " + videoDTO.getUserId()));
+        videoEntity.setUserEntity(userEntity);
+
         return videoEntity;
     }
 
     // 모든 비디오 목록을 가져오는 메서드
     public List<VideoDTO> getVideoList() {
         List<VideoEntity> videos = videoRepository.findAll();
-        return videos.stream().map(this::toDTO).collect(Collectors.toList());
+        return videos.stream().map(this::toDTO).toList();
     }
 
     // 특정 ID의 비디오 정보를 가져오는 메서드
@@ -56,9 +69,11 @@ public class VideoService {
     }
 
     // 새로운 비디오를 생성하는 메서드
-    public void createVideo(VideoDTO videoDTO) {
+    public Long createVideo(VideoDTO videoDTO) {
         VideoEntity videoEntity = toEntity(videoDTO);
         videoRepository.save(videoEntity);
+        return videoEntity.getId(); // 생성된 비디오의 ID를 반환
+
     }
 
     // 특정 ID의 비디오 정보를 업데이트하는 메서드
@@ -70,6 +85,12 @@ public class VideoService {
         videoEntity.setDuration(videoDTO.getDuration());
         videoEntity.setViewCount(videoDTO.getViewCount());
         videoEntity.setPlayTime(videoDTO.getPlayTime());
+
+        // userId를 통해 userEntity를 조회하고 설정
+        UserEntity userEntity = userRepository.findById(videoDTO.getUserId())
+                .orElseThrow(() -> new RuntimeException("User not found with id " + videoDTO.getUserId()));
+        videoEntity.setUserEntity(userEntity);
+
         videoRepository.save(videoEntity);
     }
 
@@ -78,18 +99,11 @@ public class VideoService {
     public void deleteVideosByUserId(Long userId) {
         videoRepository.deleteByUserId(userId);
     }
+
     @Transactional
     // 특정 Video_ID의 비디오를 삭제하는 메서드
     public void deleteVideosByVideoId(Long videoId) {
         videoRepository.deleteByVideoId(videoId);
-
     }
-
-//    public void deleteVideoByTitle(String title) {
-//        Video video = videoRepository.findByTitle(title)
-//                .orElseThrow(() -> new RuntimeException("Video not found"));
-//        videoRepository.delete(video);
-//    }
-
 
 }
